--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ button {
     border-radius: 50%;
 }
 section {
-       background: radial-gradient(#fff, #ffd6d6);
+       background-image:url(https://media.istockphoto.com/id/1369227756/photo/giggling-their-way-through-the-mall.jpg?s=612x612&w=0&k=20&c=QCk2FJg1m0bTFCOAvspDbCnM1p-NMMM7qdnPJXCwqH4);
 }
 
 /* Media Queries for Responsiveness */
