--- a/style.css
+++ b/style.css
@@ -219,7 +219,8 @@ button {
     border-radius: 50%;
 }
 section {
-       background color:silver;
+       background-color:silver;
+    
 }
 
 /* Media Queries for Responsiveness */
